--- a/ConfiguracionUsuarios/App.xaml
+++ b/ConfiguracionUsuarios/App.xaml
@@ -331,18 +331,24 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="5"/>
                                 <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="5"/>
                             </Grid.ColumnDefinitions>
-                            <Rectangle Name="RightPart" Grid.Column="0" Grid.ColumnSpan="2"/>
-                            <Rectangle Name="LeftPart" Grid.Column="0"/>
-                            <ContentPresenter Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <Rectangle Name="MiddlePart" Grid.Column="0" Grid.ColumnSpan="3"/>
+                            <Rectangle Name="LeftPart" Grid.Column="2"/>
+                            <Rectangle Name="RightPart" Grid.Column="0"/>
+                            <ContentPresenter Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                         <ControlTemplate.Triggers>
                             <Trigger Property ="IsMouseOver" Value ="True">
+                                <Setter TargetName="LeftPart" Property="Fill" Value="#FF3296AF"/>
+                                <Setter TargetName="MiddlePart" Property="Fill" Value="Transparent"/>
                                 <Setter TargetName="RightPart" Property="Fill" Value="#FF3296AF"/>
                             </Trigger>
                             <Trigger Property ="IsEnabled" Value ="False">
                                 <Setter TargetName="LeftPart" Property="Fill" Value="LightCyan"/>
-                                <Setter TargetName="RightPart" Property="Fill" Value="#FF3296AF"/>
+                                <Setter TargetName="MiddlePart" Property="Fill" Value="#FF3296AF"/>
+                                <Setter TargetName="RightPart" Property="Fill" Value="LightCyan"/>
+                                
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
